--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,36 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/TedCCLeung/PhDEI
 BugReports: https://github.com/TedCCLeung/PhDEI/issues
+Imports: 
+    ComplexHeatmap,
+    dplyr (>= 1.0.7),
+    edgeR,
+    ggplot2 (>= 3.3.5),
+    ggridges,
+    magrittr (>= 2.0.1),
+    rlang,
+    roxygen2,
+    stringr (>= 1.4.0),
+    tidyr (>= 1.1.4),
+    utils
+Suggests: 
+    circlize,
+    ComplexUpset,
+    dendextend,
+    dynamicTreeCut,
+    ggmap,
+    ggpubr,
+    limma,
+    PK,
+    plotly,
+    reshape2,
+    Ternary,
+    tibble
+RoxygenNote: 7.2.0
+Depends: 
+    R (>= 2.10)
